fix issue where 'get-started' overlaps huddle logo

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -26,10 +26,10 @@ article.get_started {
     font-size: calc(12px + 0.5vw);
     position: absolute;
     left: 3%;
-    margin: auto;
+    gap: 1rem;
+    margin-inline: auto;
     width: 80%;
     max-width: 800px;
-    /* max-width: 60%; */
     right: 3%;
     z-index: 1;
     background-color: white;
@@ -37,7 +37,6 @@ article.get_started {
 
 article.get_started button {
     font-size: calc(12px + 0.5vw);
-    margin-top: 20px;
 }
 
 footer .top-footer {
@@ -52,7 +51,7 @@ footer .top-footer {
     row-gap: 20px;
     margin-top: 40px;
     padding-left: 20px;
-    padding-top: 100px;
+    padding-top: 150px;
     color: white;
     font-size: 18px;
     font-weight: 400;
